Missing ENDBR in entry_x86_64_tls.c entry_x86_64_tsd.c entry_x86_tls.c entry_x86_tsd.c
Intel Control-flow Enforcement Technology (CET):
https://software.intel.com/en-us/articles/intel-sdm
contains shadow stack (SHSTK) and indirect branch tracking (IBT). When CET is enabled, ELF object files must be marked with .note.gnu.property section. Also when IBT is enabled, all indirect branch targets must start with ENDBR instruction.
ENDBR is missing in entry_x86_64_tls.c entry_x86_64_tsd.c entry_x86_tls.c entry_x86_tsd.c