tests/dummy/patchentrypoints.c
@@ -44,6 +44,7 @@ static void patch_x86_64(char *writeEntry, const char *execEntry,
     // that it's the right size for either build.
     uint64_t incrementAddr = (uint64_t) ((uintptr_t) incrementPtr);
     const char tmpl[] = {
+        0xf3, 0x0f, 0x1e, 0xfa,                               // endbr64
         0xa1, 0xf0, 0xde, 0xbc, 0x9a, 0x78, 0x56, 0x34, 0x12, // movabs 0x123456789abcdef0, %eax
         0x83, 0xc0, 0x01,                                     // add    $0x1,%eax
         0xa3, 0xf0, 0xde, 0xbc, 0x9a, 0x78, 0x56, 0x34, 0x12, // movabs %eax,0x123456789abcdef0
@@ -55,8 +56,8 @@ static void patch_x86_64(char *writeEntry, const char *execEntry,
     }
 
     memcpy(writeEntry, tmpl, sizeof(tmpl));
-    memcpy(writeEntry + 1, &incrementAddr, sizeof(incrementAddr));
-    memcpy(writeEntry + 13, &incrementAddr, sizeof(incrementAddr));
+    memcpy(writeEntry + 5, &incrementAddr, sizeof(incrementAddr));
+    memcpy(writeEntry + 17, &incrementAddr, sizeof(incrementAddr));
 
 #else
     assert(0); // Should not be calling this
@@ -70,6 +71,7 @@ static void patch_x86(char *writeEntry, const char *execEntry,
 #if defined(__i386__)
     uintptr_t *p;
     char tmpl[] = {
+        0xf3, 0x0f, 0x1e, 0xfb,     // endbr32
         0xa1, 0x0, 0x0, 0x0, 0x0,   // mov 0x0, %eax
         0x83, 0xc0, 0x01,           // add $0x1, %eax
         0xa3, 0x0, 0x0, 0x0, 0x0,   // mov %eax, 0x0
@@ -83,10 +85,10 @@ static void patch_x86(char *writeEntry, const char *execEntry,
     }
 
     // Patch the address of the incrementPtr variable.
-    p = (uintptr_t *)&tmpl[1];
+    p = (uintptr_t *)&tmpl[5];
     *p = (uintptr_t) incrementPtr;
 
-    p = (uintptr_t *)&tmpl[9];
+    p = (uintptr_t *)&tmpl[13];
     *p = (uintptr_t) incrementPtr;
 
     memcpy(writeEntry, tmpl, sizeof(tmpl));
